# Orderbook

./: .gitignore  LICENSE  README.md
Examples/rust-sender/: Cargo.toml
Monitoring/: app.py  requirements.txt  scripts.py
Monitoring/Templates/: index.html
Networking/python/: receiver.py  sender.py
Networking/rust/websockets/: Cargo.toml
Networking/rust/websockets/src/: client.rs  main.rs
Orderbook/: notes.txt
Orderbook/orderbook/: Cargo.toml
Serialization/rustsbe/: Cargo.toml  schemas.xml
Venue/venue/: Cargo.toml
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
docs/anstream/: all.html  enum.ColorChoice.html  fn.stderr.html  fn.stdout.html  index.html  macro.eprint.html  macro.eprintln.html  macro.panic.html  macro.print.html  macro.println.html  struct.AutoStream.html  struct.StripStream.html  type.Stderr.html  type.Stdout.html
docs/anstyle/: all.html  enum.AnsiColor.html  enum.Color.html  index.html  struct.Ansi256Color.html  struct.EffectIter.html  struct.Effects.html  struct.Reset.html  struct.RgbColor.html  struct.Style.html
docs/anstyle_parse/: all.html  index.html  struct.AsciiParser.html  struct.Params.html  struct.ParamsIter.html  struct.Parser.html  struct.Utf8Parser.html  trait.CharAccumulator.html  trait.Perform.html  type.DefaultCharAccumulator.html
docs/anstyle_query/: all.html  fn.clicolor.html  fn.clicolor_force.html  fn.is_ci.html  fn.no_color.html  fn.term_supports_ansi_color.html  fn.term_supports_color.html  fn.truecolor.html  index.html
docs/chrono/: all.html  enum.Month.html  (+20 more)
(+2588 files in other folders)
